Add favicon to Welcome and Treetop pages

--- a/src/welcome/welcome.html
+++ b/src/welcome/welcome.html
@@ -3,6 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" sizes="32x32" href="icons/icon32.png" />
+    <link rel="icon" type="image/png" sizes="48x48" href="icons/icon48.png" />
+    <link rel="icon" type="image/png" sizes="64x64" href="icons/icon64.png" />
+    <link rel="icon" type="image/png" sizes="96x96" href="icons/icon96.png" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="128x128"
+      href="icons/icon128.png" />
     <title>Welcome to Treetop!</title>
   </head>
   <body>
